--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^4.0.0"
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-filter": "^5.1.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "html5-boilerplate": "^7.1.0",
+    "jquery": "^3.3.1",
+    "jquery-datetimepicker": "^2.5.21",
+    "readable-stream": "^3.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp"
   },
   "repository": {
     "type": "git",
