--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-filter": "^5.1.0",
+    "gulp-if": "^2.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "html5-boilerplate": "^7.1.0",
     "jquery": "^3.3.1",
     "jquery-datetimepicker": "^2.5.21",
-    "readable-stream": "^3.3.0"
+    "readable-stream": "^3.3.0",
+    "yargs": "^13.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
